<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/navigation_panel"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="horizontal">

    <Button
      android:id="@+id/navigation_go_first"
      style="@style/Widget.AppCompat.Button.Borderless"
      android:layout_width="@dimen/flat_button_size_square"
      android:layout_height="wrap_content"
      android:text="@string/navigation_first"
      android:theme="@style/NavigationButton" />

    <Button
      android:id="@+id/navigation_go_previous"
      style="@style/Widget.AppCompat.Button.Borderless"
      android:layout_width="@dimen/flat_button_size_square"
      android:layout_height="wrap_content"
      android:text="@string/navigation_previous"
      android:theme="@style/NavigationButton" />

    <TextView
      android:id="@+id/navigation_pages_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:paddingEnd="@dimen/material_card_edge_margin"
      android:paddingStart="@dimen/material_card_edge_margin"
      android:theme="@style/NavigationText"
      tools:text="1 of 1000" />

    <Button
      android:id="@+id/navigation_go_next"
      style="@style/Widget.AppCompat.Button.Borderless"
      android:layout_width="@dimen/flat_button_size_square"
      android:layout_height="wrap_content"
      android:text="@string/navigation_next"
      android:theme="@style/NavigationButton" />

    <Button
      android:id="@+id/navigation_go_last"
      style="@style/Widget.AppCompat.Button.Borderless"
      android:layout_width="@dimen/flat_button_size_square"
      android:layout_height="wrap_content"
      android:text="@string/navigation_last"
      android:theme="@style/NavigationButton" />

  </LinearLayout>

</android.support.v7.widget.CardView>
