<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/material_card_supporting_text_padding_bottom"
    android:paddingEnd="@dimen/material_card_supporting_text_padding_horizontal"
    android:paddingStart="@dimen/material_card_supporting_text_padding_horizontal"
    android:paddingTop="@dimen/material_card_supporting_text_padding_top">

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/EditTextStyle">

      <EditText
        android:id="@+id/authorization_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/auth_edit_text_drawable_padding"
        android:drawableStart="@drawable/ic_auth_login"
        android:hint="@string/authorization_login_label"
        android:inputType="text|textNoSuggestions"
        android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/EditTextStyle">

      <EditText
        android:id="@+id/authorization_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:drawableStart="@drawable/ic_auth_password"
        android:hint="@string/authorization_password_label"
        android:inputType="textPassword"
        android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <Button
      android:id="@+id/button_sign_in"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:stateListAnimator="@null"
      android:text="@string/authorization_button_login"
      android:theme="@style/SignInButton"
      tools:targetApi="lollipop" />

  </LinearLayout>

</android.support.v7.widget.CardView>
