<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:orientation="vertical">

  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:columnCount="2">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="@string/profile_label_personal_data"
        tools:text="Personal data"/>

      <TextView
        android:id="@+id/profile_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        tools:text="Group: Users"/>

      <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        tools:text="Status: custom status"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_uq"/>

      <com.sedsoftware.yaptalker.commons.views.PostRatingView
        android:id="@+id/profile_uq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="+1000"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_sign"/>

      <TextView
        android:id="@+id/profile_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Signature text here"/>

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="@string/profile_rewards"/>

      <TextView
        android:id="@+id/profile_rewards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        tools:text="Rewards text here"/>

    </GridLayout>

  </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:columnCount="2">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="@string/profile_label_info"
        tools:text="User info"/>

      <TextView
        android:id="@+id/profile_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        tools:text="Registered: 01.01.2017"/>

      <TextView
        android:id="@+id/profile_time_zone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        tools:text="Time zone: 01.01.2017 - 00.00"/>

      <TextView
        android:id="@+id/profile_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Birth date: Jun 01, 1988"/>

      <TextView
        android:id="@+id/profile_web_site"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        tools:text="Web site"/>

      <TextView
        android:id="@+id/profile_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Russia"/>

      <TextView
        android:id="@+id/profile_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Sex: Male"/>

      <TextView
        android:id="@+id/profile_interests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        tools:text="Interests: IT, programming"/>

    </GridLayout>

  </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:columnCount="2">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="@string/profile_label_statistics"
        tools:text="Forum statistics"/>

      <TextView
        android:id="@+id/profile_messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Messages: 10000"/>

      <TextView
        android:id="@+id/profile_messages_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Message per day:: 100"/>

      <TextView
        android:id="@+id/profile_bayans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Outdated news: 10"/>

      <TextView
        android:id="@+id/profile_topics_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Created topics todays: 10"/>

    </GridLayout>

  </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <GridLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:columnCount="2">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="@string/profile_label_contacts"
        tools:text="Contacts"/>

      <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Email: abdcdefg@gmail.com"/>

      <TextView
        android:id="@+id/profile_icq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="ICQ: 123456789"/>

    </GridLayout>

  </android.support.v7.widget.CardView>

  <android.support.v7.widget.CardView
    android:id="@+id/profile_photo_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
      android:id="@+id/profile_photo"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:ignore="ContentDescription"
      tools:srcCompat="@drawable/dummy_photo"/>


  </android.support.v7.widget.CardView>

</LinearLayout>
